<resources>

    <string name="app_name">Pomodoro</string>
    <string name="trello">Trello</string>

    <!-- Tabs -->
    <string name="todo">To do</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>

    <!-- Fields -->
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="desc_optional">Description (optional)</string>
    <string name="comment">Comment</string>

    <!-- Actions -->
    <string name="next_action">Next action</string>
    <string name="card_done">Card done</string>
    <string name="back">Back</string>
    <string name="short_break">Short break</string>
    <string name="long_break">Long break</string>
    <string name="start_timer">Start timer</string>
    <string name="stop">Stop</string>
    <string name="add">Add</string>
    <string name="add_todo">Add to do card</string>
    <string name="edit">Edit</string>
    <string name="edit_card">Edit card</string>
    <string name="delete">Delete</string>
    <string name="delete_card">Delete card</string>
    <string name="open_card">Open card</string>
    <string name="update">Update</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Are you sure?</string>
    <string name="break_time">Break time</string>
    <string name="break_completed">Break completed</string>
    <string name="pomodoro_time">Pomodoro time</string>
    <string name="pomodoro_completed">Pomodoro completed</string>
    <string name="done_comment">%1$d pomodoros, %2$s total spent</string>

    <!-- Settings drawer -->
    <string name="login">Connect with Trello</string>
    <string name="logout">Log out</string>
    <string name="board">Trello board</string>
    <string name="select_board">Select a Trello board</string>
    <string name="todo_list">To do list</string>
    <string name="doing_list">Doing list</string>
    <string name="done_list">Done list</string>
    <string name="unused">Unused</string>

    <!-- ImageView descriptions -->
    <string name="desc_user_avatar">User avatar</string>
    <string name="desc_icon_drag">Drag icon</string>

</resources>
