<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerConfig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:showIn="@layout/drawer" >

    <LinearLayout
        android:id="@+id/boardSelector"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="?selectableItemBackground"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/boardHeader"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:gravity="end|center_vertical"
            android:text="@string/board"
            android:maxLines="1"
            android:ellipsize="end"
            style="@style/HeaderText"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/boardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:textColor="?android:textColorPrimary"
            android:text="@string/select_board"
            android:maxLines="1"
            android:ellipsize="end"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:id="@+id/listsSelector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="@dimen/avatar_size"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded" >
            <TextView
                android:id="@+id/todoHeader"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="end|center_vertical"
                android:text="@string/todo_list"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/HeaderText" />
            <TextView
                android:id="@+id/doingHeader"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="end|center_vertical"
                android:text="@string/doing_list"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/HeaderText" />
            <TextView
                android:id="@+id/doneHeader"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="end|center_vertical"
                android:text="@string/done_list"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/HeaderText" />
            <TextView
                android:id="@+id/unusedHeader"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="end|center_vertical"
                android:textColor="@android:color/darker_gray"
                android:text="@string/unused"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/HeaderText" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/drawerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clipToPadding="false"
            android:overScrollMode="never" />
    </LinearLayout>

</LinearLayout>
